# ai-cmo-platform

./: .gitignore  AI-CMO-Platform-사용설명서.md  AI-CMO-Platform-카톡공유용.md  CLAUDE.md  README.md  pyproject.toml
agents/: competitor.md  copywriter.md  data-analyst.md  designer.md  reporter.md  repurposer.md  researcher.md  reviewer.md  sales-writer.md  seo-specialist.md  strategist.md
clients/_template/: brand-guidelines.md  config.md  consultation-notes.md  copy-patterns.md  pricing-rules.md
clients/flowerplus/: brand-guidelines.md  config.md  copy-patterns.md  pricing-rules.md
clients/heydudu/: brand-guidelines.md  config.md  copy-patterns.md  pricing-rules.md
clients/iris/: brand-guidelines.md  config.md  copy-patterns.md  pricing-rules.md
docs/: 사용설명서.md  카톡공유용.md
handoff/: README.md  hermes-agent.md  openclaw.md  package-manifest.json
references/: flowerplus-competitor-analysis.md  flowerplus-geo-guide.md  flowerplus-gtm-analysis.md  flowerplus-user-research.md  irdeck-structure.md  iris-data-patterns.md  sample-client-a-competitor-analysis.md  sample-client-a-geo-guide.md  sample-client-a-gtm-analysis.md  sample-client-a-user-research.md  sample-client-b-data-patterns.md
skills/: README.md
src/aicmo/: __init__.py  (+24 more)
templates/: role-sop.md
tests/: conftest.py  test_adapters.py  test_concurrency_kb_idempotency.py  test_engine_defect_fixes.py  test_evaluate.py  test_executor_presets.py  test_gate_and_kb.py  test_launch_pack_spec.py  test_lease.py  test_llm_integration.py  test_mockup.py  test_onboarding.py  test_operating_contract.py  test_reliability.py  test_web.py  test_workflow_engine.py  test_workflow_safety.py
workflows/: approval-demo.workflow.yaml  blog-article.workflow.yaml  launch-pack.workflow.yaml
(+167 files in other folders)
